--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reach/router": "^1.3.4",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
+    "framer-motion": "^4.1.3",
     "postcss": "^8.2.9",
     "postcss-cli": "^8.3.1",
     "react": "^16.14.0",
