--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "serve dist -p 3000"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.0",
     "@reach/router": "^1.3.4",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
